# babeltrace-dev-old

./: Makefile.am  configure.ac
converter/: Makefile.am  babeltrace-cfg.c  babeltrace.c  test-live.c
doc/: babeltrace.1
formats/: Makefile.am
formats/ctf/: ctf.c
formats/ctf-text/: ctf-text.c
formats/ctf/ir/: fields.c
formats/lttng-live/: Makefile.am  liblttng-live.c  lttng-live-functions.c  lttng-live.c
formats/lttng-state/: Makefile.am  event-cb.c  get_state.py  lttng-state-comm.c  lttng-state-plugin.c  lttng-state-track.c  lttng-state-track.h  lttng-state.h  lua_scripts.h  test-statesystem.py
formats/lttng-state/lua-scripts/: exit_syscall.lua  gc.lua  load.sh  sched_process_fork.lua  sched_process_free.lua  sched_switch.lua  sys_close.lua  sys_open.lua
include/: Makefile.am
include/babeltrace/: babeltrace-internal.h
include/babeltrace/ctf/: events-internal.h
include/babeltrace/ctf-ir/: fields.h
lib/: iterator.c
lib/component/: port.c
lib/ctf-ir/: field-types.c
lttngtop/: Makefile.am  live.c  lttngtop.c
plugins/: Makefile.am
plugins/debug-info/: Makefile.am  bin-info.c  debug-info.c  debug-info.h  plugin.c
plugins/libctfcopytrace/: clock-fields.c  ctfcopytrace.c  ctfcopytrace.h
plugins/lttng-utils/: copy.c
plugins/text/: print.c  text.c  text.h
plugins/utils/: plugin.c
plugins/utils/trimmer/: copy.c  iterator.c
plugins/writer/: write.c  writer.c
tests/: tests
tests/ctf-traces/intersection/: content.txt
tests/lib/: Makefile.am  testintersect.c
